sit-core/src/duktape/bindings.rs

extern "C" {
    pub fn duk_push_number(ctx: *mut duk_context, val: duk_double_t);
}
extern "C" {
    pub fn duk_push_nan(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_int(ctx: *mut duk_context, val: duk_int_t);
}
extern "C" {
    pub fn duk_push_uint(ctx: *mut duk_context, val: duk_uint_t);
}
extern "C" {
    pub fn duk_push_string(ctx: *mut duk_context,
                           str: *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_push_lstring(ctx: *mut duk_context,
                            str: *const ::std::os::raw::c_char,
                            len: duk_size_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_push_pointer(ctx: *mut duk_context,
                            p: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_push_sprintf(ctx: *mut duk_context,
                            fmt: *const ::std::os::raw::c_char, ...)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_push_vsprintf(ctx: *mut duk_context,
                             fmt: *const ::std::os::raw::c_char,
                             ap: *mut __va_list_tag)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_push_this(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_current_function(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_current_thread(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_global_object(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_heap_stash(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_global_stash(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_thread_stash(ctx: *mut duk_context,
                                 target_ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_object(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_bare_object(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_array(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_c_function(ctx: *mut duk_context, func: duk_c_function,
                               nargs: duk_idx_t) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_c_lightfunc(ctx: *mut duk_context, func: duk_c_function,
                                nargs: duk_idx_t, length: duk_idx_t,
                                magic: duk_int_t) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_thread_raw(ctx: *mut duk_context, flags: duk_uint_t)
     -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_proxy(ctx: *mut duk_context, proxy_flags: duk_uint_t)
     -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_error_object_raw(ctx: *mut duk_context,
                                     err_code: duk_errcode_t,
                                     filename: *const ::std::os::raw::c_char,
                                     line: duk_int_t,
                                     fmt: *const ::std::os::raw::c_char, ...)
     -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_error_object_va_raw(ctx: *mut duk_context,
                                        err_code: duk_errcode_t,
                                        filename:
                                            *const ::std::os::raw::c_char,
                                        line: duk_int_t,
                                        fmt: *const ::std::os::raw::c_char,
                                        ap: *mut __va_list_tag) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_buffer_raw(ctx: *mut duk_context, size: duk_size_t,
                               flags: duk_small_uint_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_push_buffer_object(ctx: *mut duk_context,
                                  idx_buffer: duk_idx_t,
                                  byte_offset: duk_size_t,
                                  byte_length: duk_size_t, flags: duk_uint_t);
}
extern "C" {
    pub fn duk_push_heapptr(ctx: *mut duk_context,
                            ptr: *mut ::std::os::raw::c_void) -> duk_idx_t;
}
extern "C" {
    pub fn duk_pop(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_pop_n(ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_pop_2(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_pop_3(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_get_type(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_check_type(ctx: *mut duk_context, idx: duk_idx_t,
                          type_: duk_int_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_type_mask(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_uint_t;
}
extern "C" {
    pub fn duk_check_type_mask(ctx: *mut duk_context, idx: duk_idx_t,
                               mask: duk_uint_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_undefined(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_null(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_boolean(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_number(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_nan(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_string(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_object(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_buffer(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_buffer_data(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_pointer(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_lightfunc(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_symbol(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_array(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_c_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_ecmascript_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_bound_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_thread(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_constructable(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_dynamic_buffer(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_fixed_buffer(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_external_buffer(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_error_code(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_errcode_t;
}
extern "C" {
    pub fn duk_get_boolean(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_number(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_double_t;
}
extern "C" {
    pub fn duk_get_int(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_get_uint(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_get_string(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_get_lstring(ctx: *mut duk_context, idx: duk_idx_t,
                           out_len: *mut duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_get_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                          out_size: *mut duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_buffer_data(ctx: *mut duk_context, idx: duk_idx_t,
                               out_size: *mut duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_pointer(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_c_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_c_function;
}
extern "C" {
    pub fn duk_get_context(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut duk_context;
}
extern "C" {
    pub fn duk_get_heapptr(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_boolean_default(ctx: *mut duk_context, idx: duk_idx_t,
                                   def_value: duk_bool_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_number_default(ctx: *mut duk_context, idx: duk_idx_t,
                                  def_value: duk_double_t) -> duk_double_t;
}
extern "C" {
    pub fn duk_get_int_default(ctx: *mut duk_context, idx: duk_idx_t,
                               def_value: duk_int_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_get_uint_default(ctx: *mut duk_context, idx: duk_idx_t,
                                def_value: duk_uint_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_get_string_default(ctx: *mut duk_context, idx: duk_idx_t,
                                  def_value: *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_get_lstring_default(ctx: *mut duk_context, idx: duk_idx_t,
                                   out_len: *mut duk_size_t,
                                   def_ptr: *const ::std::os::raw::c_char,
                                   def_len: duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_get_buffer_default(ctx: *mut duk_context, idx: duk_idx_t,
                                  out_size: *mut duk_size_t,
                                  def_ptr: *mut ::std::os::raw::c_void,
                                  def_len: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_buffer_data_default(ctx: *mut duk_context, idx: duk_idx_t,
                                       out_size: *mut duk_size_t,
                                       def_ptr: *mut ::std::os::raw::c_void,
                                       def_len: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_pointer_default(ctx: *mut duk_context, idx: duk_idx_t,
                                   def_value: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_c_function_default(ctx: *mut duk_context, idx: duk_idx_t,
                                      def_value: duk_c_function)
     -> duk_c_function;
}
extern "C" {
    pub fn duk_get_context_default(ctx: *mut duk_context, idx: duk_idx_t,
                                   def_value: *mut duk_context)
     -> *mut duk_context;
}
extern "C" {
    pub fn duk_get_heapptr_default(ctx: *mut duk_context, idx: duk_idx_t,
                                   def_value: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_opt_boolean(ctx: *mut duk_context, idx: duk_idx_t,
                           def_value: duk_bool_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_opt_number(ctx: *mut duk_context, idx: duk_idx_t,
                          def_value: duk_double_t) -> duk_double_t;
}
extern "C" {
    pub fn duk_opt_int(ctx: *mut duk_context, idx: duk_idx_t,
                       def_value: duk_int_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_opt_uint(ctx: *mut duk_context, idx: duk_idx_t,
                        def_value: duk_uint_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_opt_string(ctx: *mut duk_context, idx: duk_idx_t,
                          def_ptr: *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
}
